<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_selected"
        android:title="@string/delete_selected"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile_title"
        app:showAsAction="never" />

</menu>
